tests/semantic_errors/testcase04.c
// missing return

int main(void) {
    int foo = 4;
}